--- a/index.html
+++ b/index.html
@@ -1157,7 +1157,7 @@
                     <p>
                        <strong>IRI:</strong> https://w3id.org/EVI#MLModel</p>
                     <div class="comment">
-                       <span class="markdown">A descriptive recipe describing how a DigitalObject is made or obtained. It describes an Activity, and may refer to some DigitalObject as a component of the recipe.</span>
+                       <span class="markdown">An MLModel is a computational model that has been trained on data to perform a specific task. It is a digital object that captures the learned parameters and architecture resulting from a machine learning training process (Computation).</span>
                     </div>
                     <dl class="description">
                        <dt>has super-classes</dt>
@@ -1182,7 +1182,7 @@
                     <p>
                        <strong>IRI:</strong> https://w3id.org/EVI#Package</p>
                     <div class="comment">
-                       <span class="markdown">A body of structured information describing some topic(s) of interest.</span>
+                       <span class="markdown">Metadata associated with digital resources that may be packaged together or referenced.</span>
                     </div>
                     <dl class="description">
                        <dt>has super-classes</dt>
@@ -1207,7 +1207,7 @@
                     <p>
                        <strong>IRI:</strong> https://w3id.org/EVI#ROCrate</p>
                     <div class="comment">
-                       <span class="markdown">An Image is a visual representation of structured or unstructured data produced digitally.</span>
+                       <span class="markdown">An approach to packaging research data with their metadata.</span>
                     </div>
                     
                     <dl class="description">
